--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,11 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Serif&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Afacad:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500;600;700;800&display=swap');
 
-@layer base {
+
+
+/* @layer base {
     h5 {
       @apply absolute px-6 duration-200 w-52 bottom-4 md:bottom-8 md:px-10 group-hover:scale-110 group-hover:text-black;
 
@@ -30,4 +33,8 @@
     @apply  px-10 py-2 my-0 font-bold  tracking-widest
     uppercase border-2 border-black hover:text-white hover:bg-black font-OpenSans
   }
+} */
+
+.btnPrimery{
+  @apply py-3 px-8 bg-secondary font-semibold  text-white rounded hover:bg-primary transition-all duration-300 
 }
